add a few helper + use define in the config.php file avoir to use "global $config"

--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
+# Either "DEV" or "PROD"
+SetEnv APP_ENVIRONMENT "DEV"
+
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
